--- a/Angular/BusAppFrontend/package.json
+++ b/Angular/BusAppFrontend/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^18.2.0",
     "@ng-icons/core": "^30.3.0",
     "@ng-icons/heroicons": "^30.3.0",
+    "@ng-icons/ionicons": "^30.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
