--- a/Angular/BusAppFrontend/package.json
+++ b/Angular/BusAppFrontend/package.json
@@ -18,9 +18,10 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
-    "@ng-icons/core": "^30.3.0",
+    "@ng-icons/core": "^30.4.0",
     "@ng-icons/heroicons": "^30.3.0",
     "@ng-icons/ionicons": "^30.4.0",
+    "file-saver": "^2.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
@@ -29,6 +30,7 @@
     "@angular-devkit/build-angular": "^18.2.14",
     "@angular/cli": "^18.2.14",
     "@angular/compiler-cli": "^18.2.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.2.0",
